[project]
name = "kamaji"
version = "0.1"
description = "Simulation for multi-agent dynamics."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Johnathan Corbin", email = "jcorbin33@gatech.edu"}
]
# Dependencies managed by environment.yml, so leave this minimal or empty
dependencies = []

[project.optional-dependencies]
doc = [
    "mkdocs",
    "mkdocstrings[python]", # The fix for your error
    "pymdown-extensions",   # Required for your pymdownx.* extensions
    # "mkdocs-material",    # Uncomment this if/when you switch to the Material theme
]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
include = ["kamaji"]